Fix CME again
Java is so slow

- Fix coloring header/footer, Closes #193